todo_app/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: server-svc
spec:
  type: ClusterIP
  selector:
    app: server # This is the app as declared in the deployment.
  ports:
    - port: 2345
      protocol: TCP
      targetPort: 3000
